# DES

./: DES.cabal  LICENSE  README.md
src/: Des.hs  Main.hs  MyBits.hs
src/Des/: Bits.hs  Internal.hs
