cabal-version:      3.0
name:               DES
version:            0.1.0.0
synopsis:           DES encryption algorithm
license:            MIT
license-file:       LICENSE
author:             dpv927
category:           Crypto
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options:    
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields 
    -Wredundant-constraints
    -threaded 
    -rtsopts
    -with-rtsopts=-N

executable DES
  import:           warnings
  main-is:          Main.hs
  other-modules:    Des.Internal, Des.Bits, Des
  build-depends:    base >=4 && <5, hspec, array
  hs-source-dirs:   src
  default-language: Haskell2010
